# pystack

./: README.md  pyproject.toml  requirements.txt  tox.ini
src/: pystack.py
src/pystack/: __init__.py  __main__.py  cli.py  display.py  engine.py  storage.py
tests/: test_cli.py  test_display.py  test_engine_extra.py  test_engine_undo.py  test_pystack.py  test_storage.py
